# taterbot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/: contributing.md  pull_request_template.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml
tater_bot/: __init__.py  __main__.py  bot.py  config.py  utils.py
tater_bot/assets/: README.md
tater_bot/cogs/: slash_commands.py
taterbot/: __init__.py  __main__.py  bot.py  config.py  forwarder.py  utils.py
taterbot/assets/: README.md
taterbot/cogs/: event_listeners.py  message_commands.py  slash_commands.py
