[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=7.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tater-bot"
description = "A personal Discord bot that connects the Potato to the Clowns."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["dependencies", "urls", "version"]

[project.scripts]
tater-bot = "tater_bot.__main__:main"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["tater_bot"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
